--- a/src/components/TopNavBar/TopNavBar.scss
+++ b/src/components/TopNavBar/TopNavBar.scss
@@ -73,15 +73,15 @@
   background-position: center;
 
   &--like {
-    background-image: url('../../../public//graphics/like-30.svg');
+    background-image: url('pets-paw/graphics/like-30.svg');
   }
 
   &--favorites {
-    background-image: url('../../../public//graphics/fav-30.svg');
+    background-image: url('pets-paw/graphics/fav-30.svg');
   }
 
   &--dislike {
-    background-image: url('../../../public//graphics/dislike-30.svg');
+    background-image: url('pets-paw/graphics/dislike-30.svg');
   }
 
   &:hover {
@@ -89,33 +89,33 @@
   }
 
   &--like:active {
-    background-image: url('../../../public//graphics/like-white-30.svg');
+    background-image: url('pets-paw/graphics/like-white-30.svg');
     background-color: $red-main-color;
   }
 
   &--favorites:active {
-    background-image: url('../../../public//graphics/fav-white-30.svg');
+    background-image: url('pets-paw/graphics/fav-white-30.svg');
     background-color: $red-main-color;
   }
 
   &--dislike:active {
-    background-image: url('../../../public//graphics/dislike-white-30.svg');
+    background-image: url('pets-paw/graphics/dislike-white-30.svg');
     background-color: $red-main-color;
   }
 }
 
 .active-top-link-like .top-nav-link--like {
-  background-image: url('../../../public//graphics/like-white-30.svg');
+  background-image: url('pets-paw/graphics/like-white-30.svg');
   background-color: $red-main-color;
 }
 
 .active-top-link-fav .top-nav-link--favorites {
-  background-image: url('../../../public//graphics/fav-white-30.svg');
+  background-image: url('pets-paw/graphics/fav-white-30.svg');
   background-color: $red-main-color;
 }
 
 .active-top-link-dislike .top-nav-link--dislike {
-  background-image: url('../../../public//graphics/dislike-white-30.svg');
+  background-image: url('pets-paw/graphics/dislike-white-30.svg');
   background-color: $red-main-color;
 }
 
