--- a/src/features/UploadModal/UploadModal.scss
+++ b/src/features/UploadModal/UploadModal.scss
@@ -32,14 +32,14 @@
     width: 40px;
     height: 40px;
     background-color: $white-color;
-    background-image: url('../../../public//graphics/close-20.svg');
+    background-image: url('pets-paw/graphics/close-20.svg');
     @extend %bg-img;
     border-radius: 10px;
     align-self: flex-end;
 
     &:hover {
       background-color: $red-main-color;
-      background-image: url('../../../public//graphics/close-white-20.svg');
+      background-image: url('pets-paw/graphics/close-white-20.svg');
     }
   }
 
@@ -77,8 +77,8 @@
     cursor: pointer;
 
     &--error {
-      border: 2px dashed #FF868E;
-      background-color: #FBE0DC;
+      border: 2px dashed #ff868e;
+      background-color: #fbe0dc;
     }
   }
 
@@ -149,5 +149,3 @@
     line-height: 24px;
   }
 }
-
-
