fix: pathes url

--- a/src/routes/Breeds/Breeds.scss
+++ b/src/routes/Breeds/Breeds.scss
@@ -22,7 +22,7 @@
     //   color: #8c8c8c;
     //   background: #f8f8f7;
     //   -webkit-appearance: none;
-    //   background-image: url('./graphics/dropdown-12.svg');
+    //   background-image: url('.pets-paw/graphics/dropdown-12.svg');
     //   background-repeat: no-repeat;
     //   background-position: right;
     //   background-position-x: 90%;
@@ -59,13 +59,13 @@
     }
 
     &--desc {
-      background-image: url('./graphics/sort-revert-20.svg');
+      background-image: url('.pets-paw/graphics/sort-revert-20.svg');
       background-repeat: no-repeat;
       background-position: center;
     }
 
     &--asc {
-      background-image: url('./graphics/sort-20.svg');
+      background-image: url('.pets-paw/graphics/sort-20.svg');
       background-repeat: no-repeat;
       background-position: center;
     }
@@ -83,7 +83,7 @@
   border-radius: 10px;
   background-color: #f8f8f7;
   -webkit-appearance: none;
-  background-image: url('./graphics/dropdown-12.svg');
+  background-image: url('.pets-paw/graphics/dropdown-12.svg');
   background-repeat: no-repeat;
   background-position: right;
   background-position-x: 90%;
