--- a/src/index.css
+++ b/src/index.css
@@ -194,24 +194,24 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: url("../../public//graphics/fav-color-20.svg");
+  background-image: url("/pets-paw/graphics/fav-color-20.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
 .overlay-bg--fav:active {
-  background-image: url("../../public//graphics/fav-20.svg");
+  background-image: url("/pets-paw/graphics/fav-20.svg");
 }
 .overlay-bg--to-fav {
   width: 40px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: url("../../public//graphics/fav-20.svg");
+  background-image: url("/pets-paw/graphics/fav-20.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
 .overlay-bg--in-fav {
-  background-image: url("../../public//graphics/fav-color-20.svg");
+  background-image: url("/pets-paw/graphics/fav-color-20.svg");
 }
 .overlay-bg--breed {
   width: 90%;
@@ -228,7 +228,7 @@ body {
 }
 
 .overlay-heart:active {
-  background-image: url("../../public//graphics/fav-20.svg");
+  background-image: url("/pets-paw/graphics/fav-20.svg");
 }
 
 .home-page {
