chunk: update readme, add social links

--- a/src/features/ImpressionController/ImpressionController.scss
+++ b/src/features/ImpressionController/ImpressionController.scss
@@ -58,6 +58,14 @@
       background-image: url('/pets-paw/graphics/dislike-color-30.svg');
     }
   }
+
+  &--disabled {
+    cursor: not-allowed;
+
+    &:hover {
+      cursor: not-allowed;
+    }
+  }
 }
 
 .impressionHistory {
