--- a/src/components/TopNavBar/TopNavBar.scss
+++ b/src/components/TopNavBar/TopNavBar.scss
@@ -2,6 +2,7 @@
   margin-bottom: 10px;
   width: 100%;
   display: flex;
+  justify-content: center;
   gap: 10px;
 }
 
@@ -50,6 +51,7 @@
   background-position: center;
 
   &:hover {
+    cursor: pointer;
     background-color: $red-main-color;
 
     background-image: url('/pets-paw/graphics/search-white-20.svg');
